--- a/Client/views/lists.html
+++ b/Client/views/lists.html
@@ -1,3 +1,123 @@
-<div>
-Here are your lists!
-</div>
+<div class="container">
+    <div class="panel panel-default row" ng-controller="collectionsCtrl">
+        <div class="col-xs-4" >
+            <a ng-click="selectCategory()"
+               class="btn btn-block btn-default btn-lg">All</a>
+            <a ng-repeat="item in controller.products | orderBy:'category' | unique:'category'"
+               ng-click="selectCategory(item)" class="btn btn-block btn-default btn-lg" style="text-overflow:ellipsis;white-space:nowrap;
+    overflow:hidden;">
+                {{item}}
+            </a>
+        </div>
+
+        <div class="col-xs-8" ng-controller="addProductCtrl as addProductCtrl">
+            <a ng-click="visible=true"
+               class="btn btn-default btn-lg">Add Product</a>
+
+            <div class="well" ng-show="visible"
+                 ng-submit="addProductCtrl.addProduct();visible=false;">
+                <!--  add product Form -->
+                <form name="addProduct"  >
+
+                    <!--  Form -->
+                    <h4>Add Product</h4>
+
+                    <fieldset class="form-group">
+                        <rating ng-model="addProductCtrl.product.stars"></rating>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input ng-model="addProductCtrl.product.item" required type="text" class="form-control" placeholder="add a product" name="productname" title="Name">
+                        <span class="error" ng-show="addProduct.productname.$error.required">
+      Required!</span><br>
+                        </input>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input ng-model="addProductCtrl.product.link" class="form-control" placeholder="www.example.com" title="Link" />
+                    </fieldset>
+                    <fieldset class="form-group">
+
+
+                        <input type="text" ng-model="addProductCtrl.product.category" typeahead="item for item in controller.products | orderBy:'category' | unique:'category' | filter:$viewValue"
+                               typeahead-editable="true" class="form-control" placeholder="List" title="list"/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <select ng-model="addProductCtrl.product.shop"
+                                ng-options="item for item in controller.shops | orderBy:'name' | unique:'name'" class="form-control"
+                                 placeholder="Shop">
+                            <option value=""></option>
+                        </select>
+
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <textarea ng-model="addProductCtrl.product.description" class="form-control" placeholder="Write a short description of the product..." title="Description"></textarea>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input type="submit" class="btn btn-primary pull-right" value="OK"  />
+                    </fieldset>
+
+
+                </form>
+
+            </div>
+            <div>
+            <ul class="list-unstyled" >
+            <li ng-repeat="product in controller.products | filter:categoryFilterFn">
+                <div class="product" ng-hide="editing">
+                    <button role="button" class="glyphicon glyphicon-remove btn pull-right" ng-click="delete=true;"></button>
+                    <p ng-show="delete">
+                        <button role="button" class="btn pull-right" ng-click="controller.deleteProduct(product)">delete?</button>
+                        <button role="button" class="btn pull-right" ng-click="delete=false">cancel</button>
+                    </p>
+                    <div ng-click="editing = true; delete=false">
+                    <rating ng-model="product.stars" readonly="true"></rating>
+                    <strong>{{product.item}}</br></strong>
+                    <a href={{product.link}}>{{product.link}}</a></br>
+                    {{product.shop}}</br>
+                    <em>{{product.description}}</em></br>
+                    </div>
+                </div>
+
+                <div class="well" ng-show="editing" ng-submit="editing = false">
+
+                <form >
+
+                    <fieldset class="form-group">
+                        <rating ng-model="product.stars"></rating>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input ng-model="product.item" required type="text" class="form-control" placeholder="add a product" name="productname" title="Name">
+                        <span class="error" ng-show="productname.$error.required">
+      Required!</span><br>
+                        </input>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input ng-model="product.link" class="form-control" placeholder="www.example.com" title="Link" />
+                    </fieldset>
+                    <fieldset class="form-group">
+
+
+                        <input type="text" ng-model="product.category" typeahead="item for item in controller.products | orderBy:'category' | unique:'category' | filter:$viewValue"
+                               typeahead-editable="true" class="form-control" placeholder="List" title="list"/>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <select ng-model="product.shop"
+                                ng-options="item for item in controller.shops | orderBy:'name' | unique:'name'" class="form-control"
+                                placeholder="Shop">
+                            <option value=""></option>
+                        </select>
+
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <textarea ng-model="product.description" class="form-control" placeholder="Write a short description of the product..." title="Description"></textarea>
+                    </fieldset>
+                    <fieldset class="form-group">
+                        <input type="submit" class="btn btn-primary pull-right" value="OK"  />
+                    </fieldset>
+                </form>
+                    </div>
+            </li>
+            </ul>
+        </div>
+    </div>
+    </div>
+    </div>
